WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
253991
[iOS] Unable to show the software keyboard when programmatically focusing a text field during `dblclick`
https://bugs.webkit.org/show_bug.cgi?id=253991
Summary
[iOS] Unable to show the software keyboard when programmatically focusing a t...
Abrar Rahman Protyasha
Reported
2023-03-15 16:47:16 PDT
rdar://104600783
Attachments
Add attachment
proposed patch, testcase, etc.
Abrar Rahman Protyasha
Comment 1
2023-03-15 16:51:50 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/11579
EWS
Comment 2
2023-03-16 10:51:09 PDT
Committed
261751@main
(45fc397579fa): <
https://commits.webkit.org/261751@main
> Reviewed commits have been landed. Closing PR #11579 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug