[iOS] Unable to show the software keyboard when programmatically focusing a text field during `dblclick` https://bugs.webkit.org/show_bug.cgi?id=253991 rdar://104600783

Reviewed by Wenson Hsieh.

This commit adds the `dblclick` event to the set of events for which we
allow the software keyboard to be shown programmatically, which means
that programmatic focus now shows the software keyboard underneath a
user's double click interaction.

* LayoutTests/fast/forms/ios/show-software-keyboard-on-programmatic-focus-during-dblclick-expected.txt: Added.
* LayoutTests/fast/forms/ios/show-software-keyboard-on-programmatic-focus-during-dblclick.html: Added.
* Source/WebKit/WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::handleDoubleTapForDoubleClickAtPoint):

Canonical link: https://commits.webkit.org/261751@main